# MetaGPT

./: AGENTS.md  INNER_MONOLOGUE_PLAN.md  launch_stanford_town.py  requirements.txt  setup.py
stanford-town-vue/backend/: README.md  alembic.ini  pyproject.toml
stanford-town-vue/backend/alembic/: env.py
stanford-town-vue/backend/alembic/versions/: 20260513_1207_d487ca4d1053_initial_schema.py
stanford-town-vue/backend/app/: deps.py  main.py
stanford-town-vue/backend/app/routes/: __init__.py  config.py  health.py  imports.py  llm_logs.py  (+4 more)
stanford-town-vue/backend/config/: __init__.py  default.yaml  settings.py
stanford-town-vue/backend/core/: __init__.py  _add_requirement.py  _roles_init.py  action.py  action_node.py  actions_compat.py  const.py  context.py  context_mixin.py  logs.py  memory.py  repo_parser.py  role.py  schema.py  team.py
stanford-town-vue/backend/runner/: __init__.py  bootstrap.py  events.py  llm_config.py  manager.py  sessions.py  st_runner.py  step_sync.py
stanford-town-vue/backend/simulator/: town.py
stanford-town-vue/backend/storage/: __init__.py  db.py  exporter.py  importer.py  json_schemas.py  models.py
stanford-town-vue/backend/tests/: test_event_bus.py  test_exporter.py  test_health.py  test_importer.py  test_lifespan.py  test_manager.py  test_models.py  test_repos.py  test_routes_config.py  test_routes_imports.py  test_routes_llm_logs.py  test_routes_llm_profiles.py  test_routes_meta.py  test_routes_sims.py  test_routes_sims_manager.py  test_secret_bootstrap.py  test_smoke.py  test_st_runner.py  test_st_runner_e2e.py  test_ws_hub.py
(+880 files in other folders)
