[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stanford-town-vue-backend"
version = "0.0.1"
description = "FastAPI backend for stanford-town-vue (Vue3 + AntD + FastAPI + SQLite reimplementation of Stanford Town generative agents)."
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "stanford-town-vue contributors" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-multipart",
    "httpx>=0.27",
    "loguru>=0.7",
    "cryptography>=42",
    "pyyaml>=6.0",
    "tenacity>=8.2",
    "anytree>=2.12",
    "numpy>=1.26",
    "pandas>=2.2",
    "tiktoken>=0.6",
    "aiofiles>=23",
    "gymnasium>=0.29",
    "openai>=1.12",
    "anthropic>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "app*",
    "core*",
    "simulator*",
    "storage*",
    "runner*",
    "config*",
]
exclude = ["tests*", "alembic*", "data*", "assets*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI Depends() in defaults
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
